# shelly1gen4_matter_switch

./: .gitignore  CMakeLists.txt  INSTALL.md  INSTALL_VSCODE_WINDOWS.md  README.md  SCRIPTS.md  app_main.cpp  button.c  idf_component.yml  matter_device.cpp  ota.c  partitions.csv  script_engine.h  sdkconfig.defaults  sensors.c
components/lua/: CMakeLists.txt
main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  ade7953.c  ade7953.h  app_config.h  app_main.cpp  button.c  button.h  chip_temp.c  chip_temp.h  dashboard_html.h  hw_config.c  hw_config.h  idf_component.yml  matter_device.cpp  matter_device.h  ota.c  ota.h  power_meter.c  power_meter.h  relay.c  relay.h  script_engine.c  script_engine.h  secrets.h.example  sensors.c  sensors.h  status_led.c  status_led.h  web_api.c  web_api.h
tools/: create_matter_cluster_group.py  create_matter_group.py  make-matter-ota.py  make-merged.sh  make-webui-ota-zip.py  make_factory_bin_file.sh  wipe_acl.py  wipe_acl_on_matter_device.py
